# pgmigrate

./: .gitignore  pyproject.toml
pgmigrate/: __main__.py  config.py  migrate.py
